fixed a few layout issues

--- a/guess-the-type/src/App.css
+++ b/guess-the-type/src/App.css
@@ -8,13 +8,13 @@
         @apply bg-red-400 rounded-2xl
     }
     .correct-display {
-        @apply text-green-600 bg-gray-600 p-2 rounded-2xl
+        @apply text-green-600 bg-gray-900 p-2 rounded-2xl
     }
     .incorrect-display {
-        @apply text-red-600 bg-gray-600 p-2 rounded-2xl
+        @apply text-red-600 bg-gray-900 p-2 rounded-2xl
     }
     .normal-display {
-        @apply bg-gray-600 p-2
+        @apply bg-gray-900 p-2 rounded-2xl
         
     }
     .regular-button {
