--- a/guess-the-type/src/index.css
+++ b/guess-the-type/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: #020024;
+background: linear-gradient(12deg, rgba(2, 0, 36, 1) 23%, rgba(0, 212, 255, 1) 82%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
